# ManimTool

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default.yaml
configs/prompts/: system_zh.md
docs/: ARCHITECTURE.md  ai_intelligence_article.html
examples/: ai_intelligence_article.html  storyboard.example.json
src/manimtool/: __init__.py  cli.py  config.py  errors.py  logging.py  pipeline.py  schemas.py
src/manimtool/article/: __init__.py  html_loader.py
src/manimtool/llm/: __init__.py  anthropic_client.py  base.py  factory.py  openai_client.py
src/manimtool/render/: __init__.py  base.py  factory.py  mermaid.py
src/manimtool/tts/: __init__.py  base.py  edge_tts_client.py  factory.py
src/manimtool/video/: __init__.py  base.py  codec_util.py  factory.py  ffmpeg_composer.py  moviepy_composer.py  overlays.py
tests/: conftest.py  test_article_loader.py  test_codec_util.py  test_config.py  test_factories.py  test_llm_clients.py  test_overlays.py  test_pipeline_e2e.py  test_render_profile.py  test_schemas.py  test_tts_edge.py  test_tts_helpers.py  test_video_composers.py
