[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manimtool"
version = "0.1.0"
description = "AI 驱动的自动化视频生成工具：LLM 输出结构化代码 → 渲染图表 → TTS 合成语音 → FFmpeg 合成视频"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ManimTool Contributors" }]
keywords = ["ai", "video", "tts", "mermaid", "ffmpeg", "automation"]

dependencies = [
    # LLM 客户端（按需启用）
    "openai>=1.30.0",
    "anthropic>=0.34.0",
    # TTS
    "edge-tts>=6.1.10",
    # 视频/音频
    "moviepy>=1.0.3",
    "imageio-ffmpeg>=0.4.9",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "mutagen>=1.47.0",
    # 配置/数据校验
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "PyYAML>=6.0.1",
    # CLI / 日志
    "typer>=0.12.0",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    # 工具
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
manimtool = "manimtool.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
manimtool = ["py.typed"]

# ---------- Lint / Format ----------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

# ---------- Type Check ----------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src"]

# ---------- Tests ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=manimtool --cov-report=term-missing"
